[gd_scene load_steps=16 format=2]

[ext_resource path="res://original/sprites/tankDark_barrel1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Tank.gd" type="Script" id=2]
[ext_resource path="res://original/sprites/tankBody_darkLarge.png" type="Texture" id=3]
[ext_resource path="res://original/sprites/shotOrange.png" type="Texture" id=4]
[ext_resource path="res://original/sprites/shotLarge.png" type="Texture" id=5]
[ext_resource path="res://original/sprites/shotRed.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Tank_Burrel_Sight.gd" type="Script" id=7]
[ext_resource path="res://original/sprites/specialBarrel3_outline.png" type="Texture" id=8]
[ext_resource path="res://original/samples/tank_cannon.wav" type="AudioStream" id=9]
[ext_resource path="res://original/samples/disparo_hmg_tank.wav" type="AudioStream" id=10]
[ext_resource path="res://original/samples/reload.wav" type="AudioStream" id=11]
[ext_resource path="res://original/samples/tank_motor.wav" type="AudioStream" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Fire"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("shotLarge:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 4 ), ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("shotLarge:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 40.0163, -0.116676 ), Vector2( 40.0163, -0.116676 ), Vector2( 45.2414, -0.42403 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("shotLarge:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=2]
resource_name = "Shoot"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.502029, -0.150963 ), Vector2( -14.172, -3.78489e-06 ), Vector2( -0.502029, -0.150963 ) ]
}

[sub_resource type="GDScript" id=3]
resource_name = "tank_sounds"
script/source = "extends Node

func _ready():
	get_parent().connect(\"cannon_shooted\", self, \"on_tank_cannon_shooted\")
	get_parent().connect(\"mg_shooted\", self, \"on_tank_mg_shooted\")
	$Audio_motor.play()

func on_tank_cannon_shooted():
	$Audio_cannon.play()
	yield($Audio_cannon, \"finished\")
	$Audio_reload.play()
	
func on_tank_mg_shooted():
	$Audio_mg.play()
	
func _physics_process(delta):
	var pitch = abs(get_parent().tank_aceleration / get_parent().MAX_SPEED)
	$Audio_motor.pitch_scale = pitch + .1
"

[node name="Tank" type="KinematicBody2D"]
z_index = 10
collision_mask = 38
script = ExtResource( 2 )
tank_body = 3
tank_barrel = 6

[node name="Collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -13.4373, -18.0067, -19.0533, -12.3907, -19.1754, 11.5383, -12.4606, 18.0089, 12.323, 18.131, 29.2587, 6.95248, 29.2587, -7.18592, 12.4451, -18.3729 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Barrel" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Barrel"]
position = Vector2( -0.502029, -0.150963 )
rotation = 1.5708
texture = ExtResource( 1 )
offset = Vector2( 0.365097, -10.0835 )

[node name="Pos_Bullet" type="Position2D" parent="Barrel"]
position = Vector2( 35.9608, -3.78489e-06 )

[node name="shotLarge" type="Sprite" parent="Barrel"]
visible = false
position = Vector2( 45.2414, -0.42403 )
rotation = -1.5708
texture = ExtResource( 6 )

[node name="Anime" type="AnimationPlayer" parent="Barrel"]
playback_speed = 3.0
anims/Fire = SubResource( 1 )

[node name="Sight" type="Node2D" parent="Barrel"]
position = Vector2( 273.526, -3.78489e-06 )
script = ExtResource( 7 )

[node name="Shoot" type="AnimationPlayer" parent="Barrel"]
anims/Shoot = SubResource( 2 )

[node name="bullet_reload" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Pos_Mg" type="Position2D" parent="."]
position = Vector2( 35.8366, 11.6227 )

[node name="mg" type="Sprite" parent="."]
position = Vector2( 19.8908, 11.847 )
rotation = -1.5708
scale = Vector2( 0.571067, 0.571067 )
texture = ExtResource( 8 )

[node name="Timer_mg" type="Timer" parent="."]
wait_time = 0.1

[node name="Sounds" type="Node" parent="."]
script = SubResource( 3 )

[node name="Audio_cannon" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 9 )
bus = "Fx"

[node name="Audio_mg" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 10 )
bus = "Fx"

[node name="Audio_reload" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 11 )
bus = "Fx"

[node name="Audio_motor" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 12 )
pitch_scale = 0.09
bus = "Fx"
[connection signal="timeout" from="bullet_reload" to="." method="_on_bullet_reload_timeout"]
[connection signal="timeout" from="Timer_mg" to="." method="_on_Timer_mg_timeout"]
